implemented egg startup_commands
