# backend/api/v1alpha1/zz_generated.deepcopy.go
@@ -179,6 +179,11 @@ func (in *EggSpec) DeepCopyInto(out *EggSpec) {
 		*out = make([]DockerImage, len(*in))
 		copy(*out, *in)
 	}
+	if in.StartupCommands != nil {
+		in, out := &in.StartupCommands, &out.StartupCommands
+		*out = make([]StartupCommand, len(*in))
+		copy(*out, *in)
+	}
 	if in.StartupDone != nil {
 		in, out := &in.StartupDone, &out.StartupDone
 		*out = make([]string, len(*in))
@@ -682,6 +687,21 @@ func (in *ScheduleTask) DeepCopy() *ScheduleTask {
 		return nil
 	}
 	out := new(ScheduleTask)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *StartupCommand) DeepCopyInto(out *StartupCommand) {
+	*out = *in
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new StartupCommand.
+func (in *StartupCommand) DeepCopy() *StartupCommand {
+	if in == nil {
+		return nil
+	}
+	out := new(StartupCommand)
 	in.DeepCopyInto(out)
 	return out
 }
